Update ArrayList.java